Doc/Samples/Pos/Null/nullFFCall.p
main machine Entry {
    model fun foo(a:eid) {
    }

    start state init {
        entry {
            foo(null);
        }
    }
}
