Doc/Samples/Neg/UndeclaredIds/UndeclaredEvent3.p
main model machine Foo {
    start state S1 {
        defer Bar;
        entry {
        }
    }   
}
